--- a/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
+++ b/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
@@ -1,16 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="co.edu.uniquindio.citas.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.citas.controllersView.HelloController">
+   <children>
+      <TabPane layoutX="-3.0" prefHeight="569.0" prefWidth="737.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Inicio">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="540.0" prefWidth="728.0">
+                     <children>
+                        <ImageView fitHeight="368.0" fitWidth="230.0" layoutX="514.0" layoutY="85.0" opacity="0.28" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@imagenes/color_solido.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="370.0" fitWidth="556.0" layoutY="85.0" nodeOrientation="RIGHT_TO_LEFT" opacity="0.68" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@imagenes/imagenTareaCitas.jpeg" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="412.0" layoutY="27.0" prefHeight="30.0" prefWidth="311.0" text="Agendamiento de citas medicas" textFill="#2831ab">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Pane layoutX="33.0" layoutY="6.0" prefHeight="84.0" prefWidth="214.0">
+                           <children>
+                              <Label layoutX="19.0" layoutY="14.0" text="Nue" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="23.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="64.0" layoutY="14.0" text="v" textFill="#eb2929">
+                                 <font>
+                                    <Font name="System Bold" size="23.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="75.0" layoutY="14.0" text="o" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="23.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="70.0" layoutY="42.0" text="eps" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Pane>
+                        <Button fx:id="btnSolicitarCita" layoutX="33.0" layoutY="402.0" mnemonicParsing="false" onAction="#dirigirseSolicitarCita" prefHeight="25.0" prefWidth="190.0" text="Solicitar cita ➔" />
+                        <Button fx:id="btnCancelarOModificar" layoutX="274.0" layoutY="402.0" mnemonicParsing="false" onAction="#dirigirseCancelarOModificar" prefHeight="25.0" prefWidth="190.0" text="cancelar o modificar ➔" />
+                        <Button fx:id="btnConsultarCita" layoutX="521.0" layoutY="402.0" mnemonicParsing="false" onAction="#dirigirseConsultarCita" prefHeight="25.0" prefWidth="190.0" text="Consultar cita ➔" />
+                        <Label layoutX="554.0" layoutY="170.0" prefHeight="90.0" prefWidth="121.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="solicitar cita">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="412.0" layoutY="14.0" prefHeight="30.0" prefWidth="311.0" text="Agendamiento de citas medicas" textFill="#2831ab">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <AnchorPane layoutY="54.0" prefHeight="368.0" prefWidth="737.0">
+                           <children>
+                              <Label layoutX="193.0" layoutY="23.0" text="Ingresa los siguientes datos para agendar tu turno:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fitHeight="58.0" fitWidth="68.0" layoutX="123.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@imagenes/documento.jpg" />
+                                 </image>
+                              </ImageView>
+                              <Pane layoutX="93.0" layoutY="84.0" prefHeight="200.0" prefWidth="587.0">
+                                 <children>
+                                    <Label layoutX="30.0" layoutY="63.0" text="Nombre: *" />
+                                    <Label layoutX="226.0" layoutY="63.0" text="N° identificacion: *" />
+                                    <TextField layoutX="30.0" layoutY="101.0" />
+                                    <TextField layoutX="226.0" layoutY="101.0" />
+                                    <Button fx:id="btnSolicitarCita1" layoutX="43.0" layoutY="157.0" mnemonicParsing="false" onAction="#dirigirseSolicitarCita" prefHeight="25.0" prefWidth="190.0" text="Validar ➔" />
+                                    <Button fx:id="btnSolicitarCita11" layoutX="322.0" layoutY="157.0" mnemonicParsing="false" onAction="#dirigirseSolicitarCita" prefHeight="25.0" prefWidth="190.0" text="Volver ➔" />
+                                    <Label layoutX="37.0" layoutY="14.0" text="Los campos señalados con ( * ) son obligatorios:" />
+                                    <Label layoutX="425.0" layoutY="63.0" text="Tipo de cita" />
+                                    <ChoiceBox layoutX="425.0" layoutY="101.0" prefWidth="150.0" />
+                                 </children>
+                              </Pane>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+            <Tab text="Cancelar o modificar">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
+            </Tab>
+            <Tab text="Consultar cita">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </children>
+</Pane>
