--- a/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
+++ b/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
@@ -86,21 +86,21 @@
           </Tab>
           <Tab fx:id="tapSolicitarCita" text="solicitar cita">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="538.0" prefWidth="656.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="538.0" prefWidth="656.0" stylesheets="@Style/Style.css">
                      <children>
                         <Label layoutX="314.0" layoutY="30.0" prefHeight="30.0" prefWidth="409.0" text="Agendamiento de citas medicas" textFill="#2831ab">
                            <font>
                               <Font name="System Bold" size="27.0" />
                            </font>
                         </Label>
-                        <AnchorPane layoutY="114.0" prefHeight="368.0" prefWidth="737.0">
+                        <AnchorPane fx:id="panePaderSolicitarCita" layoutY="114.0" prefHeight="368.0" prefWidth="737.0">
                            <children>
                               <Label fx:id="lblInformativoG" layoutX="190.0" layoutY="21.0" text="Ingresa los siguientes datos para agendar tu turno:">
                                  <font>
                                     <Font size="22.0" />
                                  </font>
                               </Label>
-                              <ImageView fitHeight="58.0" fitWidth="68.0" layoutX="54.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgRegistro" fitHeight="58.0" fitWidth="68.0" layoutX="54.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@imagenes/documento.jpg" />
                                  </image>
