--- a/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
+++ b/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
@@ -164,7 +164,82 @@
             </Tab>
             <Tab fx:id="tapConsultar" text="Consultar cita">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <AnchorPane fx:id="panePrincipalConsultarCita" minHeight="0.0" minWidth="0.0" prefHeight="538.0" prefWidth="734.0" stylesheets="@Style/Style.css">
+                           <children>
+                              <Label layoutX="314.0" layoutY="30.0" prefHeight="30.0" prefWidth="409.0" text="Agendamiento de citas medicas" textFill="#2831ab">
+                                 <font>
+                                    <Font name="System Bold" size="27.0" />
+                                 </font>
+                              </Label>
+                              <AnchorPane fx:id="panePaderConsultarCita" layoutX="14.0" layoutY="79.0" prefHeight="436.0" prefWidth="714.0">
+                                 <children>
+                                    <Label fx:id="lblInformativoG2" layoutX="177.0" layoutY="21.0" prefHeight="32.0" prefWidth="520.0" text="Ingresa los siguientes datos para consultar tus citas.">
+                                       <font>
+                                          <Font size="22.0" />
+                                       </font>
+                                    </Label>
+                                    <ImageView fx:id="imgRegistro2" fitHeight="58.0" fitWidth="68.0" layoutX="54.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@imagenes/documento.jpg" />
+                                       </image>
+                                    </ImageView>
+                                    <Pane fx:id="paneDatosConsultarCita" layoutX="16.0" layoutY="66.0" prefHeight="353.0" prefWidth="685.0">
+                                       <children>
+                                          <Label layoutX="386.0" layoutY="65.0" text="N° identificacion: *">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="txtIdConsultarCita" layoutX="386.0" layoutY="101.0" prefWidth="190.0" />
+                                          <Label layoutX="10.0" layoutY="14.0" text="Los campos señalados con ( * ) son obligatorios:">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="90.0" layoutY="152.0" prefHeight="25.0" prefWidth="102.0" text="Tipo de cita: *">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <ChoiceBox fx:id="boxTipoCitaConsultarCitas" layoutX="94.0" layoutY="193.0" prefHeight="27.0" prefWidth="190.0" />
+                                          <ChoiceBox fx:id="boxTipoDocumentoConsultarCita" layoutX="94.0" layoutY="100.0" prefHeight="27.0" prefWidth="190.0" />
+                                          <Label layoutX="90.0" layoutY="65.0" prefHeight="21.0" prefWidth="178.0" text="Tipo de documento: *">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <Button fx:id="btnAceptarConsultarCita" layoutX="10.0" layoutY="294.0" mnemonicParsing="false" onAction="#aceptarConsultar" prefHeight="25.0" prefWidth="190.0" text="Aceptar ➔" />
+                                          <Button fx:id="btnLimpiarCamposConsultarCita" layoutX="248.0" layoutY="294.0" mnemonicParsing="false" onAction="#limpiarCamposConsultar" prefHeight="25.0" prefWidth="190.0" text="Limpiar campos ➔" />
+                                          <Button fx:id="btnVolverConsultarCita" layoutX="481.0" layoutY="294.0" mnemonicParsing="false" onAction="#dirigirInicioDesdeConsultar" prefHeight="25.0" prefWidth="190.0" text="Volver ➔" />
+                                       </children>
+                                    </Pane>
+                                 </children>
+                              </AnchorPane>
+                              <Label layoutX="30.0" layoutY="25.0" text="Nue" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="27.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="83.0" layoutY="25.0" text="v" textFill="#eb2929">
+                                 <font>
+                                    <Font name="System Bold" size="28.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="99.0" layoutY="24.0" text="o" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="28.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="95.0" layoutY="49.0" text="eps" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                     </children></AnchorPane>
                </content>
             </Tab>
         </tabs>
