--- a/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
+++ b/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -291,8 +294,8 @@
                                           </Label>
                                        </children>
                                     </Pane>
-                                    <Button fx:id="btnAceptarConsultarCita" layoutX="420.0" layoutY="337.0" mnemonicParsing="false" onAction="#aceptarConsultar" prefHeight="25.0" prefWidth="190.0" text="Aceptar ➔" />
-                                    <Button fx:id="btnVolverConsultarCita" layoutX="112.0" layoutY="337.0" mnemonicParsing="false" onAction="#dirigirInicioDesdeConsultar" prefHeight="25.0" prefWidth="190.0" stylesheets="@Style/Style.css" text="Volver ➔" />
+                                    <Button fx:id="btnAceptarConsultarCita" layoutX="112.0" layoutY="337.0" mnemonicParsing="false" onAction="#aceptarConsultar" prefHeight="25.0" prefWidth="190.0" text="Aceptar ➔" />
+                                    <Button fx:id="btnVolverConsultarCita" layoutX="412.0" layoutY="337.0" mnemonicParsing="false" onAction="#dirigirInicioDesdeConsultar" prefHeight="25.0" prefWidth="190.0" stylesheets="@Style/Style.css" text="Volver ➔" />
                                  </children>
                               </AnchorPane>
                               <Label layoutX="30.0" layoutY="25.0" text="Nue" textFill="#39b7dd">
@@ -319,6 +322,73 @@
                         </AnchorPane>
                      </children></AnchorPane>
                </content>
+            </Tab>
+            <Tab fx:id="tapCalendario" text="Calendario">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <AnchorPane fx:id="panePrincipalConsultarCita1" minHeight="0.0" minWidth="0.0" prefHeight="538.0" prefWidth="734.0">
+                           <children>
+                              <Label layoutX="314.0" layoutY="30.0" prefHeight="30.0" prefWidth="409.0" text="Agendamiento de citas medicas" textFill="#2831ab">
+                                 <font>
+                                    <Font name="System Bold" size="27.0" />
+                                 </font>
+                              </Label>
+                              <AnchorPane fx:id="panePaderConsultarCita1" layoutX="14.0" layoutY="79.0" prefHeight="436.0" prefWidth="714.0">
+                                 <children>
+                                    <Label fx:id="lblInformativoG22" layoutX="399.0" layoutY="21.0" prefHeight="32.0" prefWidth="290.0" text="Selecciona la fecha de tu cita ">
+                                       <font>
+                                          <Font size="22.0" />
+                                       </font>
+                                    </Label>
+                                    <ImageView fx:id="imgRegistro22" fitHeight="58.0" fitWidth="68.0" layoutX="54.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@imagenes/documento.jpg" />
+                                       </image>
+                                    </ImageView>
+                                    <Pane fx:id="paneDatosConsultarCita1" layoutX="16.0" layoutY="66.0" prefHeight="271.0" prefWidth="685.0">
+                                       <children>
+                                          <Label layoutX="10.0" layoutY="14.0" text="Los campos señalados con ( * ) son obligatorios:">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <DatePicker fx:id="dateCalendario" layoutX="30.0" layoutY="76.0" />
+                                          <ComboBox fx:id="boxHoras" layoutX="416.0" layoutY="76.0" prefWidth="189.0" />
+                                       </children>
+                                    </Pane>
+                                    <Button fx:id="btnAceptarCalendario" layoutX="264.0" layoutY="321.0" mnemonicParsing="false" onAction="#aceptarCalendario" prefHeight="25.0" prefWidth="190.0" text="Aceptar ➔" />
+                                 </children>
+                              </AnchorPane>
+                              <Label layoutX="30.0" layoutY="25.0" text="Nue" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="27.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="83.0" layoutY="25.0" text="v" textFill="#eb2929">
+                                 <font>
+                                    <Font name="System Bold" size="28.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="99.0" layoutY="24.0" text="o" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="28.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="95.0" layoutY="49.0" text="eps" textFill="#39b7dd">
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <stylesheets>
+                              <URL value="@Style/Style.css" />
+                              <URL value="@Style/Style.css" />
+                           </stylesheets>
+                        </AnchorPane>
+                     </children>
+                  </AnchorPane>
+              </content>
             </Tab>
         </tabs>
       </TabPane>
