se termina problema con las fechas

--- a/src/main/resources/co/edu/uniquindio/citas/Style/Style.css
+++ b/src/main/resources/co/edu/uniquindio/citas/Style/Style.css
@@ -5,7 +5,7 @@
 #paneOpciones{
 
 }
-#panePrincipal,#panePaderSolicitarCita{
+#panePrincipal,#panePaderSolicitarCita,#paneDatosConsultarCita1,#paneDatosConsultarCita,#paneDatosCancelar{
     -fx-background-color: white; /* Color de fondo del Pane */
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.10), 20, 0, 0, 0); /* Efecto de sombra */
 
