--- a/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
+++ b/src/main/resources/co/edu/uniquindio/citas/hello-view.fxml
@@ -358,7 +358,7 @@
                                           <Image url="@imagenes/documento.jpg" />
                                        </image>
                                     </ImageView>
-                                    <Pane fx:id="paneDatosConsultarCita1" layoutX="16.0" layoutY="66.0" prefHeight="271.0" prefWidth="685.0">
+                                    <Pane fx:id="paneDatosConsultarCita1" layoutX="16.0" layoutY="66.0" prefHeight="255.0" prefWidth="685.0">
                                        <children>
                                           <Label layoutX="10.0" layoutY="14.0" text="Los campos señalados con ( * ) son obligatorios:">
                                              <font>
@@ -367,12 +367,13 @@
                                           </Label>
                                           <DatePicker fx:id="dateCalendario" layoutX="24.0" layoutY="101.0" />
                                           <ComboBox fx:id="boxHoras" layoutX="411.0" layoutY="101.0" prefWidth="189.0" />
-                                          <Button fx:id="btnModificarCalendario" layoutX="8.0" layoutY="250.0" mnemonicParsing="false" onAction="#modificarCalendario" prefHeight="25.0" prefWidth="190.0" text="Modificar ➔" />
                                           <Label layoutX="24.0" layoutY="68.0" prefHeight="17.0" prefWidth="68.0" text="Fecha: *" />
                                           <Label layoutX="411.0" layoutY="60.0" prefHeight="17.0" prefWidth="68.0" text="Hora: *" />
                                        </children>
                                     </Pane>
-                                    <Button fx:id="btnAceptarCalendario" layoutX="264.0" layoutY="321.0" mnemonicParsing="false" onAction="#aceptarCalendario" prefHeight="25.0" prefWidth="190.0" text="Aceptar ➔" />
+                                    <Button fx:id="btnAceptarCalendario" layoutX="26.0" layoutY="335.0" mnemonicParsing="false" onAction="#aceptarCalendario" prefHeight="32.0" prefWidth="226.0" text="Aceptar ➔" />
+                                    <Button fx:id="btnreFrescarCalendario" layoutX="434.0" layoutY="335.0" mnemonicParsing="false" onAction="#refrescarHoras" prefHeight="32.0" prefWidth="220.0" text="Refescar horas disponibles ➔" />
+                                    <Button fx:id="btnModificarCalendario" layoutX="29.0" layoutY="335.0" mnemonicParsing="false" onAction="#modificarCalendario" prefHeight="32.0" prefWidth="220.0" text="ModificarCalendario ➔" />
                                  </children>
                               </AnchorPane>
                               <Label layoutX="30.0" layoutY="25.0" text="Nue" textFill="#39b7dd">
