--- a/src/main/resources/co/edu/uniquindio/citas/view.fxml
+++ b/src/main/resources/co/edu/uniquindio/citas/view.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.citas.controllersView.HelloController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.citas.controllersView.ViewController">
    <children>
       <TabPane fx:id="tabPane" layoutX="-3.0" prefHeight="569.0" prefWidth="737.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
